src/objects/LoRaWAN_Subscriber__c.object
<CustomObject>
    <description>DO NOT USE: Depreciated in favour of LoRaWAN Tenancies &amp; Packages.</description>
    <fields>
        <fullName>Account__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <label>Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>LoRaWAN Subscribers</relationshipLabel>
        <relationshipName>LoRaWAN_Subscribers</relationshipName>
        <required>true</required>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Commitment__c</fullName>
        <description>How long is customer committed for</description>
        <label>Commitment</label>
        <required>true</required>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>1 Year</fullName>
                </value>
                <value>
                    <fullName>3 Years</fullName>
                </value>
                <value>
                    <fullName>5 Years</fullName>
                </value>
                <value>
                    <fullName>No Commitment</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Device_Rate__c</fullName>
        <label>Device Rate</label>
        <precision>18</precision>
        <required>true</required>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Fair_Usage_Limit__c</fullName>
        <defaultValue>60</defaultValue>
        <description>Expected maximum number of messages per day under the fair FUP (Fair Usage Policy)</description>
        <label>Fair Usage Limit</label>
        <precision>6</precision>
        <required>true</required>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Message_Rate__c</fullName>
        <defaultValue>0.05</defaultValue>
        <label>Message Rate</label>
        <precision>18</precision>
        <required>true</required>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Overage_Rate__c</fullName>
        <defaultValue>0.05</defaultValue>
        <description>Charge per message over the FUP (Fair Usage Policy)</description>
        <label>Overage Rate</label>
        <precision>18</precision>
        <required>true</required>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <label>LoRaWAN Subscriber</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Account__c</columns>
        <columns>OBJECT_ID</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>LoRaWAN Subscriber Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>LoRaWAN Subscribers</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>